# Rust

./: .gitignore
first_test/: Cargo.toml
first_test/src/: main.rs
first_test/src/primitives/: primitives.rs
first_test/src/program/: lao.rs  main.rs
test-files/: rust_cmd.txt
